--- a/UI/login.html
+++ b/UI/login.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action = "http://127.0.0.1:5000/success" method = "post">
+        <form action = "{{ url_for('login') }}" method = "post">
             <p>Enter Text: </p>
             <p><input type="text" name="input" /></p>
             <p><input type = "submit" value = "Submit" /></p>
